Fix: dont care about dark mode

--- a/website/style.css
+++ b/website/style.css
@@ -1,14 +1,16 @@
-@media (prefers-color-scheme: light) {
-  .dark-mode {
-    display: inline-block;
-  }
-
-  .light-mode {
-    visibility: hidden;
-    display: none;
-  }
+/* @media (prefers-color-scheme: light) { */
+.dark-mode {
+  display: inline-block;
 }
 
+.light-mode {
+  visibility: hidden;
+  display: none;
+}
+
+/* } */
+
+/*
 @media (prefers-color-scheme: dark) {
   .dark-mode {
     visibility: hidden;
@@ -19,7 +21,7 @@
     display: inline-block;
   }
 }
-
+*/
 
 body {
   font-family: 'Lucida Console', monospace;
